// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Other tests "Hrflow" object relative tests it should throw an error when no key is given 1`] = `"No API Key was supplied for Hrflow SDK"`;

exports[`Other tests http module relative tests It should throw an error if the error code is not 200 or 201 1`] = `[Error: An error occured]`;

exports[`Other tests http module relative tests it should throw an error if something went wrong with the request 1`] = `[Error: Error message]`;

exports[`Wrapper test Profile endpoints It should call the get profile attachments endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/attachments?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile/attachments?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile/attachments",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile document endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/attachments?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile/attachments?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile/attachments",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint using Date number 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profiles/searching?source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1514764800&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "path": "/v1/profiles/searching?source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1514764800&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "pathname": "/v1/profiles/searching",
    "port": null,
    "protocol": "https:",
    "query": "source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1514764800&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "search": "?source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1514764800&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint using Date object 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profiles/searching?source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "path": "/v1/profiles/searching?source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "pathname": "/v1/profiles/searching",
    "port": null,
    "protocol": "https:",
    "query": "source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "search": "?source_ids=[%22source1%22,%22source2%22]&timestamp_start=0&timestamp_end=1&page=1&stage=YES&limit=30&sort_by=date_reception&order_by=desc",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile parsing endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/parsing?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile/parsing?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile/parsing",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile parsing endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/parsing?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile/parsing?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile/parsing",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile scoring endpoint with the profile id 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/scoring?source_id=source_id&profile_id=profile_id",
    "path": "/v1/profile/scoring?source_id=source_id&profile_id=profile_id",
    "pathname": "/v1/profile/scoring",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_id=profile_id",
    "search": "?source_id=source_id&profile_id=profile_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the get profile scoring endpoint with the profile reference 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/scoring?source_id=source_id&profile_reference=profile_reference",
    "path": "/v1/profile/scoring?source_id=source_id&profile_reference=profile_reference",
    "pathname": "/v1/profile/scoring",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id&profile_reference=profile_reference",
    "search": "?source_id=source_id&profile_reference=profile_reference",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the post profile data endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "multipart/form-data",
      "X-API-KEY": "api_key",
    },
    "method": "POST",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/indexing",
    "path": "/v1/profile/indexing",
    "pathname": "/v1/profile/indexing",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Profile endpoints It should call the post resume endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "Content-type": "multipart/form-data",
      "X-API-KEY": "api_key",
    },
    "method": "POST",
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/profile/parsing/file",
    "path": "/v1/profile/parsing/file",
    "pathname": "/v1/profile/parsing/file",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;

exports[`Wrapper test Source endpoints It should call the get source endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/source?source_id=source_id",
    "path": "/v1/source?source_id=source_id",
    "pathname": "/v1/source",
    "port": null,
    "protocol": "https:",
    "query": "source_id=source_id",
    "search": "?source_id=source_id",
    "slashes": true,
  },
}
`;

exports[`Wrapper test Source endpoints It should call the get source list endpoint 1`] = `
Object {
  "options": Object {
    "headers": Object {
      "X-API-KEY": "api_key",
    },
  },
  "url": Url {
    "auth": null,
    "hash": null,
    "host": "api.hrflow.ai",
    "hostname": "api.hrflow.ai",
    "href": "https://api.hrflow.ai/v1/sources",
    "path": "/v1/sources",
    "pathname": "/v1/sources",
    "port": null,
    "protocol": "https:",
    "query": null,
    "search": null,
    "slashes": true,
  },
}
`;
